<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.beachvolleycounter.MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/app_title"
        android:paddingStart="50dp"
        android:paddingLeft="50dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#FFF"
        android:textAppearance="@style/AppTheme"
        android:background="#2196F3"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:adjustViewBounds="true"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/volleyball"
        tools:ignore="ContentDescription" />

    <TextView
        android:gravity="center"
        android:id="@+id/set_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_title"
        android:layout_marginTop="8dp"
        android:text="@string/set_1"
        android:textAppearance="@style/AppTheme"
        android:textColor="#616161"
        android:textSize="24sp" />



    <LinearLayout
        android:layout_below="@id/set_number"
        android:id="@+id/scoreBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_centerVertical="true"
        tools:context="com.example.android.beachvolleycounter.MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="24sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/team_a"
                android:textColor="#616161"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/team_a_sets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="24sp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/number_0"
                    android:textColor="#000000"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="24sp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/number_0"
                    android:textColor="#000000"
                    android:textSize="56sp" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="point_teamA"
                android:text="@string/point"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="timeoutA"
                android:text="@string/timeout"
                android:textAllCaps="true" />


            <TextView
                android:layout_marginTop="8sp"
                android:id="@+id/set1TeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#616161"
                android:gravity="center"/>
            <TextView
                android:id="@+id/set2TeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#616161"
                android:gravity="center"/>
            <TextView
                android:id="@+id/set3TeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#616161"
                android:gravity="center"/>


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="24sp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/team_b"
                android:textColor="#616161"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/team_b_sets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="24sp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/number_0"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/number_0"
                    android:textColor="#000000"
                    android:textSize="56sp" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="point_teamB"
                android:text="@string/point"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="timeoutB"
                android:text="@string/timeout"
                android:textAllCaps="true" />


            <TextView
                android:layout_marginTop="8sp"
                android:id="@+id/set1TeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#616161"
                android:gravity="center"/>
            <TextView
                android:id="@+id/set2TeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#616161"
                android:gravity="center"/>
            <TextView
                android:id="@+id/set3TeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#616161"
                android:gravity="center"/>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/winningTeam"
        android:layout_below="@id/scoreBoard"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:gravity="center"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:onClick="resetScore"
        android:text="@string/reset_button"
        android:textAllCaps="true" />



</RelativeLayout>


